--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,11 @@
 {{- /* Comments area start */ -}}
 {{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
 {{- /* Comments area end */ -}}
+<script src="https://utteranc.es/client.js"
+        repo="shwetarkadam/myblog"
+        issue-term="url"
+        label="codeklutz"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
